@@ -4,7 +4,10 @@ ChangeLog for package rkwarddev
   - added "about" option to rk.XML.plugin() to overrule pluginmap defaults
   - added rk.plugin.component(), i.e. modularized the component generation, to allow for more than one
     component in rk.plugin.skeleton(), wich subsequently gained the new option "components"
+  - improved dependency support, rk.plugin.skeleton() writes dependencies from <about> to DESCRIPTION now
   - fixed dependency definition in rk.XML.about()
+  - fixed "verion" typo in rk.XML.about()
+  - the dot "." is now also allowed in file names
 
 ## 0.04-0 (2011-10-19)
   - for accurcy and consistency with the docs, the "properties" option changed to "modifiers" in rk.JS.vars()
